--- a/myapp/package.json
+++ b/myapp/package.json
@@ -13,6 +13,7 @@
     "react-scrap": "^1.0.2",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
+    "reactstrap": "^8.9.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
